# cmake_add_target

./: AddTarget.cmake  README.md
example/code/: CMakeLists.txt
example/code/exeA/: CMakeLists.txt
example/code/exeA/inc/: ExeA.hpp
example/code/exeA/inc/ExeA1/: ExeA1.hpp
example/code/exeA/inc/ExeA1/ExeA1Sub/: ExeA1Sub.hpp
example/code/exeA/inc/ExeA2/: ExeA2.hpp
example/code/exeA/src/: ExeA.cpp  main.cpp
example/code/exeA/src/exeA1/: ExeA1.cpp
example/code/exeA/src/exeA1/ExeA1Sub/: ExeA1Sub.cpp
example/code/exeA/src/exeA2/: ExeA2.cpp
example/code/libraryA/: CMakeLists.txt
example/code/libraryA/inc/libraryASub/: LibraryASub.hpp
example/code/libraryA/inc2/: LibrarySecondInc.hpp
example/code/libraryA/interface/: LibraryA.hpp
example/code/libraryA/src/: LibraryA.cpp  LibrarySecondInc.cpp
example/code/libraryA/src/libraryASub/: LibraryASub.cpp
example/code/libraryInterfaceA/: CMakeLists.txt
example/code/libraryInterfaceA/interface/: LibraryInterfaceA.hpp
example/code/libraryInterfaceB/: CMakeLists.txt
example/code/libraryInterfaceB/interface/: LibraryInterfaceB.hpp
example/code/libraryInterfaceC/: CMakeLists.txt
example/code/libraryInterfaceC/interface/: LibraryInterfaceC.hpp
